Completed first version of openapi; Completed test of DataMapper
